--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
 {
-  "name": "chat-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "socket-server",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "socket-server.mjs",
   "scripts": {
-    "socket": "node index.mjs"
+    "start": "node socket-server.mjs",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
-    "@prisma/client": "^6.9.0",
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^8.15.2",
-    "prisma": "^6.9.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^20.19.0",
-    "ts-node": "^10.9.2"
+    "socket.io": "^4.7.2"
   }
 }
